--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -36,7 +36,7 @@
 							</div>
 						</div>
 						<div class="layui-inline">
-							<input class="layui-input" disabled style="display:none" lay-verify="imgs"/>
+							<input class="layui-input" disabled style="display:none"/>
 						</div>
 					</div>
 					
@@ -79,8 +79,8 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea name="comment"  id="input_localName" placeholder="请输入内容"
-								class="layui-textarea"  lay-verify="required"></textarea>
+							<textarea name="comment"  id="comment_finish" placeholder="请输入内容"
+								class="layui-textarea"></textarea>
 						</div>
 					</div>
 
