--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -40,8 +40,8 @@
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top layui-form">
 							<select class="layui-input layui-input-one" id="sele" name="remark" lay-filter="dateChange">
-								<option value="指定日期">指定日期</option>
-								<option value="大修时整改" selected="selected">大修时整改</option>
+								<option value="指定日期"  selected="selected">指定日期</option>
+								<option value="大修时整改">大修时整改</option>
 							</select>
 							</div>
 						</div>
@@ -57,7 +57,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea id="comment" name="comment" lay-verify="required" placeholder="请输入内容"
+							<textarea id="comment_repair" name="comment" placeholder="请输入内容"
 								class="layui-textarea"></textarea>
 						</div>
 					</div>
