--- a/src/main/resources/static/html/assign-task.html
+++ b/src/main/resources/static/html/assign-task.html
@@ -18,7 +18,7 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_arrange" data-method="offset" data-type="t" lay-filter="arrange">作业安排</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_arrange" data-method="offset" data-type="t" lay-filter="arrange"><span class="layui-icon">&#xe770;</span>&nbsp;作业安排</button>
 				</div>
 				
 				<div class="layui-colla-content layui-show" >
@@ -50,7 +50,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea id="comment" lay-verify="required" placeholder="请输入内容"
+							<textarea id="comment_assign" placeholder="请输入内容"
 								class="layui-textarea"></textarea>
 						</div>
 					</div>
