--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -21,7 +21,7 @@
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				
 				<div class="hbtn h2c">
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn"  lay-submit lay-filter="next_step">下一步</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn"  lay-submit lay-filter="next_step">下一步&nbsp;<span class="layui-icon">&#xe65b;</span></button>
 				</div>
 				<div class="layui-colla-content layui-show">
 
@@ -55,9 +55,8 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea name="comment" id="input_localName" placeholder="请输入内容"
-
-								class="layui-textarea" lay-verify="required"></textarea>
+							<textarea name="comment" id="comment_receive" placeholder="请输入内容"
+								class="layui-textarea"></textarea>
 
 						</div>
 					</div>
