--- a/src/main/resources/static/html/estimate-team-leader.html
+++ b/src/main/resources/static/html/estimate-team-leader.html
@@ -16,10 +16,10 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="rollback">回退</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete">闭环处理</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" >作业安排</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="estimate_next"  data-method="offset" data-type="t" >下一步</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="rollback"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete"><span class="layui-icon">&#xe63c;</span>&nbsp;闭环处理</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="work_plan"  data-method="offset" data-type="t" ><span class="layui-icon">&#xe770;</span>&nbsp;作业安排</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="estimate_next"  data-method="offset" data-type="t" >下一步&nbsp;<span class="layui-icon">&#xe65b;</span></button>
 				</div>
 				
 				<div id="coordinate_tree"></div>
