--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -73,7 +73,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label">来源</label>
+			      <label class="text-font layui-form-label">问题区域</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="welName">
 			          <option value="">请选择</option>
@@ -104,18 +104,9 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">装置</label>
+			      <label class="text-font layui-form-label">上报人</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <select id="equipment">
-			          <option value="">请选择</option>
-			          <option value="主体装置一列">主体装置一列</option>
-			          <option value="主体装置二列">主体装置二列</option>
-			          <option value="主体装置三列" >主体装置三列</option>
-			          <option value="主体装置四列">主体装置四列</option>
-			          <option value="主体装置五列">主体装置五列</option>
-			          <option value="主体装置六列">主体装置六列</option>
-			          <option value="主体装置七列">主体装置七列</option>
-			         </select>
+			        <input type="text" class="layui-input layui-input-one" id="applypeople">
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
