--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -32,7 +32,8 @@
 							<label class="layui-form-label labelr">现场施工图</label>
 							<div class="layui-input-inline layui-input-top">
 								<!-- 多图片上传 -->
-			                    <button type="button" class="layui-btn layui-btn-sm" id="addFinishImg">选择上传图片</button> 
+			                    <button type="button" class="layui-btn layui-btn-sm primary-btn" id="addFinishImg">
+			                    	<i class="layui-icon">&#xe681;</i> 选择图片</button> 
 							</div>
 						</div>
 						<div class="layui-inline">
@@ -209,6 +210,7 @@
 	<script type="text/javascript" src="../js/url_param.js"></script>
 	<script src="../jsPackage/layui-v2.4.2/layui.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../js/receive-task.js"></script>
+	<script type="text/javascript" src="../jsPackage/js/Convert_Pinyin.js"></script>
 	<script type="text/javascript" src="../js/finish-task.js"></script>
 </body>
 </html>
