--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -15,7 +15,7 @@
 <body>
 
 	<!-- 完成作业 -->
-	<div class="pro-div  layui-form"  lay-filter="receive-task">
+	<div class="pro-div layui-form"  lay-filter="receive-task">
 
 		<!-- 问题处理 -->
 		<div class="layui-collapse" lay-accordion="">
@@ -64,7 +64,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top">
-								<input name="remark" type="text"
+								<input name="remark1" id="remark1" type="text"
 									class="layui-input layui-input-one" disabled="disabled">
 							</div>
 						</div>
