--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css">
     <link rel="stylesheet" href="../css/report-trace.css" media="all">
   </head>
-  <body style="min-width: 1100px;">
+  <body>
     <div class="layui-container">
     	<form class="layui-form">
     	    <div class="layui-form-item">
@@ -35,7 +35,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label">描述</label>
+			      <label class="text-font layui-form-label" style="width: 55px;">描述</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <input type="text" id="problemdescribe" class="layui-input">
 			      </div>
@@ -73,7 +73,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label">问题区域</label>
+			      <label class="text-font layui-form-label" style="width: 55px;">问题区域</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="welName">
 			          <option value="">请选择</option>
@@ -139,7 +139,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label">部门</label>
+			      <label class="text-font layui-form-label" style="width: 55px;">部门</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="problemtype">
 			          <option value="">请选择</option>
@@ -158,7 +158,7 @@
 			    </div>
 			    <div class="layui-inline"> 
 			      <label class="text-font layui-form-label">相关处理人</label>
-			      <div class="layui-input-inline" style="width: 150px;">
+			      <div class="layui-input-inline" style="width: 150px; margin-top: 13px;">
 			        <input id="handler" type="text" class="layui-input">
 			      </div>
 			    </div>
@@ -169,7 +169,7 @@
 
 	<script type="text/html" id="toolbarBtn">
   	   <div class="layui-row">
-		<div class="layui-col-xs4 layui-col-md3" >
+		<div class="layui-col-xs4 layui-col-sm3  layui-col-md3" >
 			<div class="layui-col-xs6 layui-col-md6">
 				<button type="button" disabled="disabled" class="layui-btn layui-btn-radius layui-btn-danger layui-btn-sm">
 					<i class="layui-icon" id="uncount">0</i>
@@ -183,19 +183,21 @@
 				项已整改
 			</div>
 		</div>
-		<div class="layui-col-xs12 layui-col-md5 layui-col-md-offset4">
-			<button type="button" class="layui-btn" id="export" lay-event="export">
+		<div class="layui-col-xs8 layui-col-sm8 layui-col-md5 layui-col-md-offset4" >
+			<div class="layui-col-md-offset2" style="min-width:350px;">
+			<button type="button" class="layui-btn layui-btn-sm" id="export" lay-event="export">
 				<i class="layui-icon">&#xe621;</i>导出
 			</button>
-			<button type="button" class="layui-btn layui-btn-danger" id="delete" lay-event="delete">
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-danger" id="delete" lay-event="delete">
 				<i class="layui-icon">&#xe640;</i>删除
 			</button> 
-			<button type="button" class="layui-btn layui-btn-normal" data-type="reload" lay-event="querydata">
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-normal" data-type="reload" lay-event="querydata">
 				<i class="layui-icon">&#xe615;</i>查询
 			</button>  
-			<button type="button" class="layui-btn layui-btn-warm" id="open-advance" lay-event="open-advance">
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-warm" id="open-advance" lay-event="open-advance">
 				<i class="layui-icon">&#xe608;</i><span id="advance-search">打开高级搜索</span>
 			</button>
+			</div>
 	  </div>
 	</script>
 
