--- a/src/main/resources/static/html/pending-problem.html
+++ b/src/main/resources/static/html/pending-problem.html
@@ -10,9 +10,12 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <link rel="stylesheet" href="../jsPackage/layui-v2.4.2/css/layui.css">
 <link rel="stylesheet" href="../css/report.css" media="all">
-<body style="background-color: #F0F0F0;">
-	<div class="layui-row layui-col-space10">
-		<div class="layui-col-md10">
+<body style="background-color: #FAFDFD;margin-left:8px;margin-right:8px;width:98%;height:100%">
+	<div class="layui-row layui-col-space12" style="background-color: #FAFDFD;">
+		<div class="layui-col-md12" style="margin-top:20px">
+			<div style="font-size:36px;text-align:center;font-weight:500;color:#666666">&nbsp待&nbsp办&nbsp任&nbsp务&nbsp列&nbsp表&nbsp</div>
+		</div>
+		<div class="layui-col-md12">
 			<table class="layui-table" lay-filter="test" id="pending"></table>
 		</div>
 	</div>
@@ -26,7 +29,7 @@
 
 
 	<script type="text/html" id="barDemo">
- 		 <a class="layui-btn layui-btn-xs" lay-event="edit">处理</a>
+ 		 <a class="layui-btn layui-btn-xs" lay-event="edit" style="font-size:13px">&nbsp&nbsp&nbsp&nbsp处&nbsp&nbsp&nbsp&nbsp理&nbsp&nbsp&nbsp&nbsp</a>
 	</script>
 	<script src="../jsPackage/js/jquery-1.9.1.min.js"></script>
 	<script src="../jsPackage/js/jquery.cookie.js"></script>
@@ -47,20 +50,20 @@
 		        
 		        table.render({
 				    elem: '#pending'
-				    ,height: 420
 				    ,url: '/iot_process/process/tasks/layui' //数据接口
 				    ,where:{
 				    	"userName":$.cookie("name").replace(/"/g,"")
 				    }
 			  		,skin:'line'
 				    ,cols: [[ //表头
-				      {field: 'piid', title: 'ID', hide:true}
-				      ,{field: 'area', title: '属地', hide:true}
-				      ,{field: 'currentnode', title: '流程节点'}
-				      ,{field: 'describle', title: '问题描述'}
-				      ,{field: 'reportperson', title: '上报人'}
-				      ,{field: 'tip', title: '是否超期'}
-				      ,{fixed: 'right', width: 165, align:'center', toolbar: '#barDemo'}
+						{type:'numbers', title: '序号',width:'8.25%'}
+				      ,{field: 'piid', title: 'ID',width:'12%', hide:true}
+				      ,{field: 'area', title: '属地',width:'165', hide:true}
+				      ,{field: 'currentnode', title: '流程节点',width:'16%'}
+				      ,{field: 'describle', title: '问题描述',width:'26%'}
+				      ,{field: 'reportperson', title: '上报人',width:'16%'}
+				      ,{field: 'tip', title: '是否超期',width:'16%'}
+				      ,{fixed: 'right',title: '操作', width: '18%', align:'center', toolbar: '#barDemo'}
 				    ]]
 			   });
 			  //监听行工具事件
