--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -64,7 +64,7 @@
 						<div class="layui-inline">
 							<label class="layui-form-label labelr">整改日期</label>
 							<div class="layui-input-inline layui-input-top">
-								<input name="remark1" id="remark1" type="text"
+								<input name="remark" type="text"
 									class="layui-input layui-input-one" disabled="disabled">
 							</div>
 						</div>
