--- a/src/main/resources/static/html/assign-task.html
+++ b/src/main/resources/static/html/assign-task.html
@@ -170,8 +170,8 @@
 				<h2 class="layui-colla-title h2c">工单信息</h2>
 				<div class="layui-colla-content layui-show">
 					<div class="btn-div">
-						<button class="layui-btn layui-btn-normal layui-btn-sm pbtn problem_describe">脚手架搭拆申请单</button>
-						<button class="layui-btn layui-btn-normal layui-btn-sm pbtn problem_describe">防腐（保温）申请单</button>
+						<a class="pbtn problem_describe" target="_blank" href="./staging-work-requisition.html">脚手架搭拆申请单</a>
+						<a class="pbtn problem_describe" target="_blank" href="./anticorrosion-work-requisition.html">防腐（保温）申请单</a>
 					</div>
 				</div>
 			</div>
