--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -168,8 +168,8 @@
 				<h2 class="layui-colla-title h2c">工单信息</h2>
 				<div class="layui-colla-content layui-show">
 					<div class="btn-div">
-						<a class="pbtn problem_describe" href="wwww.baidu.com">脚手架搭拆申请单</a>
-						<a class="pbtn problem_describe" href="wwww.baidu.com">防腐（保温）申请单</a>
+						<a class="pbtn problem_describe" target="_blank" href="./staging-work-requisition.html">脚手架搭拆申请单</a>
+						<a class="pbtn problem_describe" target="_blank" href="./anticorrosion-work-requisition.html">防腐（保温）申请单</a>
 					</div>
 				</div>
 			</div>
