--- a/src/main/resources/static/html/pending-problem.html
+++ b/src/main/resources/static/html/pending-problem.html
@@ -12,10 +12,10 @@
 <link rel="stylesheet" href="../css/report.css" media="all">
 <body style="background-color: #FAFDFD;margin-left:8px;margin-right:8px;width:98%;height:100%">
 	<div class="layui-row layui-col-space12" style="background-color: #FAFDFD;">
-		<div class="layui-col-md12" style="margin-top:20px">
+		<div class="layui-col-md12" style="margin-top:20px;display:none">
 			<div style="font-size:36px;text-align:center;font-weight:500;color:#666666">&nbsp待&nbsp办&nbsp任&nbsp务&nbsp列&nbsp表&nbsp</div>
 		</div>
-		<div class="layui-col-md12">
+		<div class="layui-col-md11">
 			<table class="layui-table" lay-filter="test" id="pending"></table>
 		</div>
 	</div>
