--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -155,7 +155,9 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
 						<div class="layui-input-block" style="height: 150px;">
-							<div class="layui-carousel" id="imag">
+							<div class="layui-carousel" id="div-img">
+								<div carousel-item="" id="imag">
+								</div>
 							</div>
 						</div>
 					</div>
