--- a/src/main/resources/static/html/finish-task.html
+++ b/src/main/resources/static/html/finish-task.html
@@ -183,7 +183,9 @@
 					<div class="layui-form-item layui-form-text bott">
 						<label class="layui-form-label">问题图片</label>
 						<div class="layui-input-block">
-							<div class="layui-carousel" id="imag">
+							<div class="layui-carousel" id="div-img">
+								<div carousel-item="" id="imag">
+								</div>
 							</div>
 						</div>
 					</div>
