--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -16,6 +16,7 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
+				    <button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="rollback-accept"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" id="complete1"><span class="layui-icon">&#xe63c;</span>&nbsp;闭环处理</button>
 				</div>
 				<div class="layui-colla-content layui-show" >
