问题区域级联更改

--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -42,20 +42,8 @@
 			    <div class="layui-inline layui-col-xs5 layui-col-md5">
 			      <label class="text-font layui-form-label">属地单位</label>
 			      <div class="layui-input-inline">
-			        <select id="problemtype" name="problemtype">
+			        <select id="problemtype" name="problemtype" lay-filter="problem-area">
 			          <option value="">请选择</option>
-			          <option value="HSE办公室">HSE办公室</option>
-			          <option value="设备办">设备办</option>
-			          <option value="生产办">生产办</option>
-			          <option value="财务经营办">财务经营办</option>
-			          <option value="综合办">综合办</option>
-			          <option value="化验">化验</option>
-         			  <option value="电站">电站</option>
-         			  <option value="机械">机械</option>
-         			  <option value="仪表">仪表</option>
-         			  <option value="电机">电工</option>
-         			  <option value="净化工段">净化工段</option>
-			          <option value="维修工段">维修工段</option>
 			        </select>
 			      </div>
 			    </div>
@@ -67,34 +55,6 @@
 			      <div class="layui-input-inline">
 			        <select name="welName" id="welName" lay-search >
 			          <option value="">请选择</option>
-			          <option value="主体装置一列">主体装置一列</option>
-			          <option value="主体装置二列">主体装置二列</option>
-			          <option value="主体装置三列" >主体装置三列</option>
-			          <option value="主体装置四列">主体装置四列</option>
-			          <option value="主体装置五列">主体装置五列</option>
-			          <option value="主体装置六列">主体装置六列</option>
-			          <option value="主体装置七列">主体装置七列</option>
-			          <option value="装置区1号10KV电站">装置区1号10KV电站</option>
-			          <option value="装置区2号10KV电站">装置区2号10KV电站</option>
-			          <option value="2100单元">2100单元</option>
-			          <option value="2300单元">2300单元</option>
-			          <option value="2400单元">2400单元</option>
-			          <option value="3100单元">3100单元</option>
-			          <option value="3200单元">3200单元</option>
-			          <option value="3300单元">3300单元</option>
-			          <option value="3500单元">3500单元</option>
-			          <option value="硫磺库">硫磺库</option>
-			          <option value="检维修工棚">检维修工棚</option>
-			          <option value="检维修基地">检维修基地</option>
-			          <option value="检维修基地配电间">检维修基地配电间</option>
-			          <option value="锅炉配电间">锅炉配电间</option>
-			          <option value="污水配电间">污水配电间</option>
-			          <option value="中控室">中控室</option>
-			          <option value="分析班">分析班</option>
-			          <option value="食堂">食堂</option>
-			          <option value="办公楼">办公楼</option>
-			          <option value="营地">营地</option>
-			          <option value="其他">其他区域</option>
 			        </select>
 			      </div>
 			    </div>
