--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -86,48 +86,57 @@
 			          <option value="主体装置七列">主体装置七列</option>
 			          <option value="2100单元">2100单元</option>
 			          <option value="2300单元">2300单元</option>
+			          <option value="2400单元">2400单元</option>
+			          <option value="3000单元">3000单元</option>
 			          <option value="3100单元">3100单元</option>
 			          <option value="3200单元">3200单元</option>
 			          <option value="3300单元">3300单元</option>
-			          <option value="2400单元">2400单元</option>
 			          <option value="3500单元">3500单元</option>
+			          <option value="中控室">中控室</option>
 			          <option value="食堂">食堂</option>
 			          <option value="办公楼">办公楼</option>
+			          <option value="营地">营地</option>
+			          <option value="停车棚">停车棚</option>
+			          <option value="门岗">门岗</option>
+			          <option value="安全培训室">安全培训室</option>
+			          <option value="围墙">围墙</option>
+			          <option value="固废贮存间">固废贮存间</option>
 			          <option value="检维修基地">检维修基地</option>
-			          <option value="检维修基地配电间">检维修基地配电间</option>
+			          <option value="检维修工棚">检维修工棚</option>
+			          <option value="物资库房">物资库房</option>
+			          <option value="应急库房">应急库房</option>
+			          <option value="硫磺库">硫磺库</option>
+			          <option value="叉车停放棚">叉车停放棚</option>
+			          <option value="装置区1号10KV电站">装置区1号10KV电站</option>
+			          <option value="装置区2号10KV电站">装置区2号10KV电站</option>
 			          <option value="锅炉配电间">锅炉配电间</option>
 			          <option value="污水配电间">污水配电间</option>
-			          <option value="中控室">中控室</option>
+			          <option value="检维修基地配电间">检维修基地配电间</option>
 			          <option value="分析班">分析班</option>
-			          <option value="营地">营地</option>
+			          <option value="校验间">校验间</option>
+			          <option value="其他">其他</option>
 			        </select>
 			      </div>
 			    </div>
-			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">上报人</label>
+			    <div class="layui-inline">
+			      <label class="text-font layui-form-label">部门</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <input type="text" class="layui-input layui-input-one" id="applypeople">
-			      </div>
-			    </div>
-			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">进度</label>
-			      <div class="layui-input-inline" style="width: 150px;">
-			        <select id="schedule">
+			        <select id="problemtype">
 			          <option value="">请选择</option>
-			          <option value="问题上报">问题上报</option>
-			          <option value="问题评估">问题评估</option>
-			          <option value="净化分配">净化分配</option>
-			          <option value="维修分配">维修分配</option>
-			          <option value="作业安排">作业安排</option>
-			          <option value="作业接收">作业接收</option>
-			          <option value="作业完成">作业完成</option>
-         			  <option value="作业验收">作业验收</option>
-         			  <option value="流程闭环">流程闭环</option>
+			          <option value="净化工段">净化工段</option>
+			          <option value="HSE办公室">HSE办公室</option>
+			          <option value="设备办">设备办</option>
+			          <option value="生产办">生产办</option>
+			          <option value="财务经营办">财务经营办</option>
+			          <option value="综合办">综合办</option>
+			          <option value="化验">化验</option>
+         			  <option value="电站">电站</option>
+         			  <option value="机械">机械</option>
+         			  <option value="仪表">仪表</option>
+         			  <option value="电工">电工</option>
 			        </select>
 			      </div>
 			    </div>
-			 </div>
-			 <div class="layui-form-item layui-form-hidden">
 			    <div class="layui-inline"> 
 			      <label class="text-font layui-form-label">状态</label>
 			      <div class="layui-input-inline" style="width: 150px;">
@@ -138,22 +147,12 @@
 			        </select>
 			      </div>
 			    </div>
-			    <div class="layui-inline">
-			      <label class="text-font layui-form-label" style="width: 55px;">部门</label>
+			 </div>
+			 <div class="layui-form-item layui-form-hidden">
+			    <div class="layui-inline"> 
+			      <label class="text-font layui-form-label">上报人</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <select id="problemtype">
-			          <option value="">请选择</option>
-			          <option value="净化工段">净化工段</option>
-			          <option value="维修工段">维修工段</option>
-			          <option value="HSE办公室">HSE办公室</option>
-			          <option value="设备办">设备办</option>
-			          <option value="生产办">生产办</option>
-			          <option value="财务经营办">财务经营办</option>
-			          <option value="综合办">综合办</option>
-			          <option value="化验">化验</option>
-         			  <option value="电站">电站</option>
-         			  <option value="电机">电机</option>
-			        </select>
+			        <input type="text" class="layui-input layui-input-one" id="applypeople">
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
