--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -158,7 +158,7 @@
 			    <div class="layui-inline"> 
 			      <label class="text-font layui-form-label">相关处理人</label>
 			      <div class="layui-input-inline" style="width: 150px; margin-top: 13px;">
-			        <input id="handler" type="text" class="layui-input">
+			        <input id="maintenanceman" type="text" class="layui-input">
 			      </div>
 			    </div>
 			 </div>
