实现作业单后端保存

--- a/src/main/resources/static/html/staging-work-requisition.html
+++ b/src/main/resources/static/html/staging-work-requisition.html
@@ -33,6 +33,11 @@
 				</p>
 			 </div>
 			 <form class="layui-from layui-form-pane">
+			 	<div class="layui-form-item layuir-row-two">
+			 		<div class="layui-input-inline">
+				   	  <input id="piid" name="piid" type="text" class="layui-input" style="display: none;">
+					</div>
+				</div>
 			    <div class="layui-form-item layuir-row-two">
 			    	<div class="layui-col-md2">&nbsp;</div>
 				    <div class="layui-inline"> 
@@ -53,7 +58,7 @@
 			  	  <div class="layui-col-md2">&nbsp;</div>
 			      <label class="layui-form-label" style="width: 150px;">脚手架搭拆地点</label>
 			      <div class="layui-input-inline">
-			        <input id="location" name="location" type="text" class="layui-input" style="width: 600px;" autocomplete="off">
+			        <input id="location" name="stagingLocation" type="text" class="layui-input" style="width: 600px;" autocomplete="off">
 			      </div>
 			  </div>
 			  <div class="layui-form-item">
@@ -126,7 +131,7 @@
 			  	  <div class="layui-col-md2">&nbsp;</div>
 			      <label class="layui-form-label" style="width: 150px;">备注</label>
 			      <div class="layui-input-inline">
-			        <input id="comment" name="comment" type="text" class="layui-input" style="width: 600px;" autocomplete="off">
+			        <input id="comment" name="stagingComment" type="text" class="layui-input" style="width: 600px;" autocomplete="off">
 			      </div>
 			  </div>
 			</form> 
@@ -237,7 +242,7 @@
     <!-- 引入layui -->
     <script type="text/javascript" src="../jsPackage/layui-v2.4.2/layui.js"></script>
     <script src="../js/url_param.js"></script>
-    <script src="../js/work-requisition.js"></script>
+    <script src="../js/staging-work-requisition.js"></script>
     <script type="text/javascript">
 
     </script>
