--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -121,7 +121,7 @@
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label">部门</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <select id="problemtype">
+			        <select id="depet">
 			          <option value="">请选择</option>
 			          <option value="维修工段">维修工段</option>
 			          <option value="净化工段">净化工段</option>
@@ -130,6 +130,7 @@
 			          <option value="生产办">生产办</option>
 			          <option value="财务经营办">财务经营办</option>
 			          <option value="综合办">综合办</option>
+			          <option value="厂领导">厂领导</option>
 			        </select>
 			      </div>
 			    </div>
