--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -193,10 +193,10 @@
 				  		<i class="layui-icon">&#xe681;</i>&nbsp;上&nbsp;&nbsp;传&nbsp;</button>
 			      </div>
 	 		</div>
-	 		<div class="layui-form-item">
+	 		<div class="layui-form-item" style="display: none;" id="response-div">
 			      <label class="text-font layui-form-label" style="width: 130px;">上报结果：</label>
 			      <div class="layui-form" style="padding-top: 10px;">
-				       <p>12312你速递费史蒂芬森佛山东佛山的胜多负少的理发师的方式的浪费式单例发生了的法律上了</p>
+				       <p id="reponse-text"></p>
 			      </div>
 	 		</div>
 	 	</form>
