--- a/src/main/resources/static/html/report.html
+++ b/src/main/resources/static/html/report.html
@@ -29,6 +29,8 @@
 			      	<input type="text" name="depet" style="display: none;" class="layui-input">
 			      	<!-- 问题上报状态 -->
 			      	<input type="text" name="problemstate" value="UNFINISHED" style="display: none;" class="layui-input">
+			      	<!-- 操作节点名字-->
+			      	<input type="text" name="operateName" value="上报" style="display: none;" class="layui-input">
 			      </div>
 			    </div>
 		  	 	</div>
