--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -15,7 +15,7 @@
     	<form class="layui-form">
     	    <div class="layui-form-item">
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">专业</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">专业</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="profession">
 			       	  <option value="">请选择</option>
@@ -35,19 +35,19 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label" style="width: 55px;">描述</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">问题描述</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <input type="text" id="problemdescribe" class="layui-input">
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">开始</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">开始</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <input type="text" class="layui-input layui-input-one" id="startdate" autocomplete="off" placeholder="请选择">
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">结束</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">结束</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <input type="text" class="layui-input layui-input-one" id="enddate" autocomplete="off" placeholder="请选择">
 			      </div>
@@ -55,7 +55,7 @@
 			 </div>
 			 <div class="layui-form-item layui-form-hidden">
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">类别</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">类别</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="problemclass">
 			          <option value="">请选择</option>
@@ -73,7 +73,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label" style="width: 55px;">问题区域</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">问题区域</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="welName">
 			          <option value="">请选择</option>
@@ -119,7 +119,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label">部门</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">部门</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="depet">
 			          <option value="">请选择</option>
@@ -135,7 +135,7 @@
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">状态</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">状态</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="problemstate">
 			          <option value="">请选择</option>
@@ -147,15 +147,42 @@
 			 </div>
 			 <div class="layui-form-item layui-form-hidden">
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">上报人</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">上报人</label>
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <input type="text" class="layui-input layui-input-one" id="applypeople">
 			      </div>
 			    </div>
 			    <div class="layui-inline"> 
-			      <label class="text-font layui-form-label">相关处理人</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">相关处<br>理人</label>
 			      <div class="layui-input-inline" style="width: 150px; margin-top: 13px;">
 			        <input id="maintenanceman" type="text" class="layui-input">
+			      </div>
+			    </div>
+			    <div class="layui-inline"> 
+			      <label class="text-font layui-form-label" style="width: 60px;">整改日期</label>
+			      <div class="layui-input-inline" style="width: 150px;">
+			        <input type="text" class="layui-input layui-input-one" id="duedate" autocomplete="off" placeholder="请选择">
+			      </div>
+			    </div>
+			    <div class="layui-inline">
+			      <label class="text-font layui-form-label" style="width: 60px;">整改时间<br/>范围</label>
+			      <div class="layui-input-inline" style="width: 150px; margin-top: 13px;">
+			        <select id="isOutdate">
+			          <option value="">请选择</option>
+			          <option value="最近三天">最近三天</option>
+			          <option value="最近一周">最近一周</option>
+			          <option value="最近一个月">最近一个月</option>
+			        </select>
+			      </div>
+			    </div>
+			    <div class="layui-inline">
+			      <label class="text-font layui-form-label" style="width: 60px;">是否超期</label>
+			      <div class="layui-input-inline" style="width: 150px;">
+			        <select id="isOutdate">
+			          <option value="">请选择</option>
+			          <option value="未超期">未超期</option>
+			          <option value="已超期">已超期</option>
+			        </select>
 			      </div>
 			    </div>
 			 </div>
@@ -183,12 +210,15 @@
 			<button type="button" class="layui-btn layui-btn-sm" style="margin-left:10px" id="export" lay-event="export">
 				<i class="layui-icon">&#xe621;</i>导出
 			</button> 
-			<button type="button" class="layui-btn layui-btn-sm layui-btn-warm" id="queryself" lay-event="queryself">
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-normal" id="queryself" lay-event="queryself">
 				<i class="layui-icon">&#xe770;</i>查询相关
 			</button>
-			<button type="button" class="layui-btn layui-btn-sm layui-btn-normal" data-type="reload" lay-event="querydata">
-				<i class="layui-icon">&#xe615;</i>查询
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="querydata-all">
+				<i class="layui-icon">&#xe615;</i>查询所有
 			</button>  
+			<button type="button" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="querydata">
+				<i class="layui-icon">&#xe615;</i>条件查询
+			</button>
 			<button type="button" class="layui-btn layui-btn-sm layui-btn-danger" id="open-advance" lay-event="open-advance">
 				<i class="layui-icon">&#xe608;</i><span id="advance-search">打开高级搜索</span>
 			</button>
