--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -161,13 +161,13 @@
 			    <div class="layui-inline"> 
 			      <label class="text-font layui-form-label" style="width: 60px;">整改日期</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <input type="text" class="layui-input layui-input-one" id="duedate" autocomplete="off" placeholder="请选择">
+			        <input type="text" class="layui-input layui-input-one" id="dueDate" autocomplete="off" placeholder="请选择">
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="text-font layui-form-label" style="width: 60px;">整改时间<br/>范围</label>
+			      <label class="text-font layui-form-label" style="width: 60px;">整改时<br/>间范围</label>
 			      <div class="layui-input-inline" style="width: 150px; margin-top: 13px;">
-			        <select id="isOutdate">
+			        <select id="duedateRange">
 			          <option value="">请选择</option>
 			          <option value="最近三天">最近三天</option>
 			          <option value="最近一周">最近一周</option>
@@ -178,7 +178,7 @@
 			    <div class="layui-inline">
 			      <label class="text-font layui-form-label" style="width: 60px;">是否超期</label>
 			      <div class="layui-input-inline" style="width: 150px;">
-			        <select id="isOutdate">
+			        <select id="remarkthree">
 			          <option value="">请选择</option>
 			          <option value="未超期">未超期</option>
 			          <option value="已超期">已超期</option>
