--- a/src/main/resources/static/html/report-trace.html
+++ b/src/main/resources/static/html/report-trace.html
@@ -180,8 +180,8 @@
 			      <div class="layui-input-inline" style="width: 150px;">
 			        <select id="remarkthree">
 			          <option value="">请选择</option>
+			          <option value="超期">超期</option>
 			          <option value="未超期">未超期</option>
-			          <option value="已超期">已超期</option>
 			        </select>
 			      </div>
 			    </div>
