--- a/src/main/resources/static/html/assign-task.html
+++ b/src/main/resources/static/html/assign-task.html
@@ -18,6 +18,8 @@
 			<div class="layui-colla-item">
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				<div class="hbtn h2c site-demo-button">
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-submit lay-filter="back_previous"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
+					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit lay-filter="complete"><span class="layui-icon">&#xe63c;</span>&nbsp;闭环处理</button>
 					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe"  lay-submit id="work_arrange" data-method="offset" data-type="t" lay-filter="arrange"><span class="layui-icon">&#xe770;</span>&nbsp;作业安排</button>
 				</div>
 				
