--- a/src/main/resources/static/html/assign-task.html
+++ b/src/main/resources/static/html/assign-task.html
@@ -52,7 +52,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">处理说明</label>
 						<div class="layui-input-block right-marg">
-							<textarea id="comment_assign" placeholder="请输入内容"
+							<textarea id="comment_assign" name="comment" placeholder="请输入内容"
 								class="layui-textarea"></textarea>
 						</div>
 					</div>
