--- a/src/main/resources/static/html/estimate-repair.html
+++ b/src/main/resources/static/html/estimate-repair.html
@@ -28,9 +28,9 @@
 						<label class="layui-form-label labelr">事件/隐患标记</label>
 						<div class="layui-input-inline layui-input-top layui-form">
 							<select class="layui-input  layui-input-one " id="ticketNo" name="ticketNo">
-								<option value="0" selected="selected">普通事件</option>
+								<option value="0" selected="selected">一般问题</option>
 								<option value="1">事故事件</option>
-								<option value="2">隐患事件</option>
+								<option value="2">隐患</option>
 							</select>
 						</div>
 					</div>
