--- a/src/main/resources/static/html/acceptance.html
+++ b/src/main/resources/static/html/acceptance.html
@@ -38,9 +38,9 @@
 						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one" name="ticketNo" id="ticketNo"
 								lay-verify="required" lay-search="" disabled="disabled">
-								<option value="0">普通事件</option>
+								<option value="0">一般问题</option>
 								<option value="1">事故事件</option>
-								<option value="2">隐患事件</option>
+								<option value="2">隐患</option>
 							</select>
 						</div>
 					</div>
