--- a/src/main/resources/static/html/estimate-pure.html
+++ b/src/main/resources/static/html/estimate-pure.html
@@ -30,9 +30,9 @@
 						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one layui-form" name="ticketNo" id="ticketNo"
 								lay-verify="required" lay-search="">
-								<option value="0">其他事件</option>
+								<option value="0">一般问题</option>
 								<option value="1">事故事件</option>
-								<option value="2">隐患事件</option>
+								<option value="2">隐患</option>
 							</select>
 						</div>
 					</div>
