--- a/src/main/resources/static/html/estimate.html
+++ b/src/main/resources/static/html/estimate.html
@@ -30,9 +30,9 @@
 						<label class="layui-form-label labelr">事件/隐患标记</label>
 						<div class="layui-input-inline layui-input-top">
 							<select class="layui-input  layui-input-one"  name="ticketNo" id="ticketNo" >
-								<option value="0">普通事件</option>
+								<option value="0">一般问题</option>
 								<option value="1">事故事件</option>
-								<option value="2">隐患事件</option>
+								<option value="2">隐患</option>
 							</select>
 						</div>
 					</div>
