--- a/src/main/resources/static/html/receive-task.html
+++ b/src/main/resources/static/html/receive-task.html
@@ -21,8 +21,8 @@
 				<h2 class="layui-colla-title h2c" id="pro">问题处理</h2>
 				
 				<div class="hbtn h2c">
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-submit lay-filter="back_previous"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
-					<button class="layui-btn layui-btn-normal layui-btn-sm btn"  lay-submit lay-filter="next_step">下一步&nbsp;<span class="layui-icon">&#xe65b;</span></button>
+					<button id="back_previous" class="layui-btn layui-btn-normal layui-btn-sm btn problem_describe" lay-submit lay-filter="back_previous"><span class="layui-icon">&#xe65a;</span>&nbsp;回退</button>
+					<button id="next_step" class="layui-btn layui-btn-normal layui-btn-sm btn"  lay-submit lay-filter="next_step">下一步&nbsp;<span class="layui-icon">&#xe65b;</span></button>
 				</div>
 				<div class="layui-colla-content layui-show">
 
