--- a/src/main/resources/static/html/problemOverTime.html
+++ b/src/main/resources/static/html/problemOverTime.html
@@ -50,7 +50,7 @@
 			<div class="layui-col-md4 complate-rate " style="height: 300px">
 
 			</div>
-			<div class="layui-col-md8 complate-show" style="height: 300px">
+			<div class="layui-col-md8 complate-show" style="height: 300px;">
 
 			</div>
 			<div class="layui-col-md12" style="height:360px">
